# lan-zou-yun-zip-tool

./: .gitignore  LICENSE  README.md  lan_zou_zip_tool_gui.spec  pyproject.toml  restore_gui.spec  split_gui.spec  提示词.md
.github/workflows/: release.yml
src/lan_zou_yun/: __init__.py  app_state.py  gui_common.py  main_gui.py  restore_gui.py  split_gui.py
