[tool.poetry]
name = "lan-zou-yun"
version = "0.1.1"
description = "蓝奏云分片助手"
authors = ["AutumnPizazz <114050365+AutumnPizazz@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "lan_zou_yun", from = "src" }]

[tool.poetry.dependencies]
python = "^3.14"
pycryptodome = "^3.20.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = { version = "^6.19.0", python = ">=3.13,<3.15" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lan-zou-zip-tool-gui = "lan_zou_yun.main_gui:main"

[tool.lan_zou_gui]
font_scale_min = 0.2
font_scale_max = 5.0
font_scale_step = 0.05

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
